@@ -29,7 +29,7 @@ class AdminPageTest(TestCase):
     def test_login_connection(self):
         self.assertTrue(
             self.client.post(
-                '/gissmo/',
+                '/',
                 {
                     'username': DEFAULT_ADMIN_LOGIN,
                     'password': DEFAULT_ADMIN_PASSWORD,
@@ -38,38 +38,38 @@ class AdminPageTest(TestCase):
 
     def test_gissmo_shortcuts_dont_return_404_pages(self):
         links = [
-            '/gissmo/gissmo/organism/',
-            '/gissmo/gissmo/builttype/',
-            '/gissmo/gissmo/calibrationunit/',
-            '/gissmo/gissmo/channel/',
-            '/gissmo/gissmo/channelcode/',
-            '/gissmo/gissmo/datatype/',
-            '/gissmo/gissmo/equipdoctype/',
-            '/gissmo/gissmo/equipment/',
-            '/gissmo/gissmo/equipmodel/',
-            '/gissmo/gissmo/equipmodeldoctype/',
-            '/gissmo/gissmo/equiptype/',
-            '/gissmo/gissmo/forbiddenequipmentmodel/',
-            '/gissmo/gissmo/groundtype/',
-            '/gissmo/gissmo/intervention/',
-            '/gissmo/gissmo/network/',
-            '/gissmo/gissmo/parameterequip/',
-            '/gissmo/gissmo/parametervalue/',
-            '/gissmo/gissmo/project/',
-            '/gissmo/gissmo/stationdoctype/',
-            '/gissmo/gissmo/stationsite/',
-            '/gissmo/xhr_station',
-            '/gissmo/xhr_station_state',
-            '/gissmo/xhr_equipment',
-            '/gissmo/xhr_equip_state',
-            '/gissmo/xhr_equip_oper',
-            '/gissmo/xhr_station_position',
-            '/gissmo/xhr_built',
-            '/gissmo/xhr_parameter_value',
-            '/gissmo/site_maps',
-            '/gissmo/itineraire_maps',
+            '/gissmo/organism/',
+            '/gissmo/builttype/',
+            '/gissmo/calibrationunit/',
+            '/gissmo/channel/',
+            '/gissmo/channelcode/',
+            '/gissmo/datatype/',
+            '/gissmo/equipdoctype/',
+            '/gissmo/equipment/',
+            '/gissmo/equipmodel/',
+            '/gissmo/equipmodeldoctype/',
+            '/gissmo/equiptype/',
+            '/gissmo/forbiddenequipmentmodel/',
+            '/gissmo/groundtype/',
+            '/gissmo/intervention/',
+            '/gissmo/network/',
+            '/gissmo/parameterequip/',
+            '/gissmo/parametervalue/',
+            '/gissmo/project/',
+            '/gissmo/stationdoctype/',
+            '/gissmo/stationsite/',
+            '/xhr_station',
+            '/xhr_station_state',
+            '/xhr_equipment',
+            '/xhr_equip_state',
+            '/xhr_equip_oper',
+            '/xhr_station_position',
+            '/xhr_built',
+            '/xhr_parameter_value',
+            '/site_maps',
+            '/itineraire_maps',
             # TODO: LINK TO TEST, get_file/ missing
-            # '/gissmo/station_xml/',
+            # '/station_xml/',
             # TODO: LINK TO TEST, [A-Z0-9]{2,4} to get site_shortcut
         ]
         # login first to the application
