@@ -33,51 +33,50 @@ v1_apirouter.register(r'services', api_views.ServiceViewSet)
 v1_apirouter.register(r'sites', api_views.SiteViewSet)
 
 urlpatterns = [
-    url(r'^gissmo/xhr_station$',
+    url(r'^xhr_station$',
         views.xhr_station,
         name='xhr_station'),
-    url(r'^gissmo/xhr_station_state$',
+    url(r'^xhr_station_state$',
         views.xhr_station_state,
         name='xhr_station_state'),
-    url(r'^gissmo/xhr_equipment$',
+    url(r'^xhr_equipment$',
         views.xhr_equipment,
         name='xhr_equipment'),
-    url(r'^gissmo/xhr_equip_state$',
+    url(r'^xhr_equip_state$',
         views.xhr_equip_state,
         name='xhr_equip_state'),
-    url(r'^gissmo/xhr_equip_oper$',
+    url(r'^xhr_equip_oper$',
         views.xhr_equip_oper,
         name='xhr_equip_oper'),
-    url(r'^gissmo/xhr_station_position$',
+    url(r'^xhr_station_position$',
         views.xhr_station_position,
         name='xhr_station_position'),
-    url(r'^gissmo/xhr_built$',
+    url(r'^xhr_built$',
         views.xhr_built,
         name='xhr_built'),
-    url(r'^gissmo/xhr_parameter_value$',
+    url(r'^xhr_parameter_value$',
         views.xhr_parameter_value,
         name='xhr_parameter_value'),
-    url(r'^gissmo/site_maps/$',
+    url(r'^site_maps/$',
         views.site_maps,
         name='site_maps'),
-    url(r'^gissmo/itineraire_maps/$',
+    url(r'^itineraire_maps/$',
         views.itineraire_maps,
         name='itineraire_maps'),
-    url(r'^gissmo/get_file/(?P<app_label>.+)/(?P<model_name>.+)/(?P<field_name>.+)/(?P<identifier>\d+)$',
+    url(r'^get_file/(?P<app_label>.+)/(?P<model_name>.+)/(?P<field_name>.+)/(?P<identifier>\d+)$',
         views.get_file,
         name='get_file'),
-    url(r'^gissmo/station_xml/$',
+    url(r'^station_xml/$',
         views.station_xml,
         name='station_xml'),
-    url(r'^gissmo/([A-Z0-9]{2,4})/$',
+    url(r'^([A-Z0-9]{2,4})/$',
         views.site_shortcut,
         name='site_shortcut'),
-    url(r'^gissmo/', include(admin.site.urls)),
+    url(r'^', include(admin.site.urls)),
     url(r'^autocomplete/', include('autocomplete_light.urls')),
     url(r'^api/v1/', include(v1_apirouter.urls), name='api'),
     url(r'^api/$', RedirectView.as_view(url='v1', permanent=False), name='api_redirect'),
     url(r'^api-auth/', include('rest_framework.urls', namespace='rest_framework')),
-    url(r'^$', RedirectView.as_view(url='gissmo', permanent=False), name='homepage'),
 ] + static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)
 
 # Note about STATIC_URL: django.contrib.staticfils in INSTALLED_APPS do the job
